--- a/app/src/main/res/layout/evolucion_informatica.xml
+++ b/app/src/main/res/layout/evolucion_informatica.xml
@@ -97,7 +97,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/style_butoon"
+                        android:background="@drawable/style_btn"
                         android:drawableLeft="@drawable/ic_one"
                         android:drawableTint="@color/colorPrimary"
                         android:padding="5dp"
@@ -112,7 +112,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/style_butoon"
+                        android:background="@drawable/style_btn"
                         android:padding="5dp"
                         android:drawableLeft="@drawable/ic_two"
                         android:drawableTint="@color/colorPrimary"
@@ -127,7 +127,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/style_butoon"
+                        android:background="@drawable/style_btn"
                         android:padding="5dp"
                         android:text="Tercera Generación (1964-1971)"
                         android:textAllCaps="false"
@@ -141,7 +141,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/style_butoon"
+                        android:background="@drawable/style_btn"
                         android:padding="5dp"
                         android:text="Cuarta Generación (1971-1983)"
                         android:textAllCaps="false"
@@ -155,7 +155,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/style_butoon"
+                        android:background="@drawable/style_btn"
                         android:padding="5dp"
                         android:text="Quinta Generación (1984-...)"
                         android:textAllCaps="false"
@@ -171,7 +171,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/style_butoon"
+                        android:background="@drawable/style_btn"
                         android:padding="5dp"
                         android:text="Evolucion informática en Cuba"
                         android:textAllCaps="false"
