--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,13 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="textoFab">17sp</dimen>
+
+    <dimen name="space_component">5dp</dimen>
+    <dimen name="space_component2x">10dp</dimen>
+    <dimen name="space_component3x">15dp</dimen>
+    <dimen name="space_component5x">25dp</dimen>
+
+    <dimen name="space_big">20dp</dimen>
+    <dimen name="card_detail_mount_margin">45dp</dimen>
+    <dimen name="card_detail_mount_text_size">25dp</dimen>
 </resources>
