--- a/app/src/main/res/layout/dominios_infor.xml
+++ b/app/src/main/res/layout/dominios_infor.xml
@@ -14,9 +14,10 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
 
+            android:background="@drawable/imagendomi"
             android:id="@+id/collapsitdominios"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="220dp"
             android:fitsSystemWindows="true"
             android:tooltipText="Title"
             app:contentScrim="@color/colorPrimary"
@@ -24,15 +25,15 @@
 
 
             <androidx.appcompat.widget.Toolbar
-
                 android:id="@+id/toolbardominios"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:minHeight="0dp"
+
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/Widget.AppCompat.Light.PopupMenu.Overflow"
-                app:title="Evolución de la Informática"
-                app:titleTextColor="@color/white" />
+                app:title="Diminios de la Informática"
+                 />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -44,14 +45,16 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.cardview.widget.CardView
-            android:layout_margin="5dp"
-            app:cardCornerRadius="5dp"
+            android:backgroundTint="@color/view"
+            android:layout_marginBottom="5dp"
+            android:layout_margin="12dp"
+            app:cardCornerRadius="8dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <TextView
-
                 android:id="@+id/dominioinfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
