--- a/app/src/main/res/layout/evolucion_informatica.xml
+++ b/app/src/main/res/layout/evolucion_informatica.xml
@@ -20,6 +20,7 @@
             android:fitsSystemWindows="true"
             app:contentScrim="@color/colorPrimary"
             android:tooltipText="Title"
+            app:titleEnabled="false"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways" >
 
             <ImageView
